--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
                         const encodedPkce = parts[2];
                         const decodedPkce = atob(encodedPkce);
                         pkceData = JSON.parse(decodedPkce);
-                        console.log('Successfully extracted PKCE data from state');
+                        console.log('Successfully extracted PKCE data from state', pkceData);
+                        document.getElementById('debug').innerHTML += '<p>Code Verifier: ' + 
+                            (pkceData.code_verifier ? pkceData.code_verifier.substring(0, 10) + '...' : 'Not Found') + '</p>';
                     }
                 } catch (e) {
                     console.error('Error parsing PKCE data from state:', e);
+                    document.getElementById('debug').innerHTML += '<p>Error extracting PKCE data: ' + e.message + '</p>';
                 }
 
                 // Build redirect URL with all available data
@@ -52,17 +55,23 @@
                 // Add PKCE values if we have them
                 if (pkceData.code_verifier) {
                     params.set('code_verifier', pkceData.code_verifier);
-                    console.log('Added code_verifier to redirect params');
+                    console.log('Added code_verifier to redirect params:', pkceData.code_verifier.substring(0, 10) + '...');
+                    document.getElementById('debug').innerHTML += '<p>Added code_verifier to redirect params</p>';
                 }
                 if (pkceData.code_challenge) {
                     params.set('code_challenge', pkceData.code_challenge);
-                    console.log('Added code_challenge to redirect params');
+                    console.log('Added code_challenge to redirect params:', pkceData.code_challenge);
                 }
 
                 // Redirect back to app
                 const redirectUrl = `indexai://oauth2callback?${params.toString()}`;
                 console.log('Redirecting to:', redirectUrl);
-                window.location.href = redirectUrl;
+                document.getElementById('debug').innerHTML += '<p>Redirecting to app...</p>';
+                
+                // Setting a small delay to ensure debug info is visible
+                setTimeout(() => {
+                    window.location.href = redirectUrl;
+                }, 1000);
             } else {
                 // Handle Google OAuth (original behavior)
                 document.getElementById('status').textContent = 'Processing Google callback...';
@@ -73,9 +82,26 @@
         // Run when page loads
         window.onload = handleOAuthRedirect;
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .debug-info {
+            background-color: #f5f5f5;
+            border: 1px solid #ddd;
+            padding: 10px;
+            margin-top: 20px;
+            font-family: monospace;
+            white-space: pre-wrap;
+        }
+    </style>
 </head>
 <body>
     <h1>IndexAI OAuth Redirect</h1>
     <div id="status">Processing OAuth callback...</div>
+    <div id="debug" class="debug-info">Debug info will appear here...</div>
 </body>
 </html> 
